# confer

./: CMakeLists.txt  Changelog.md  Doxyfile.in  Guidelines.md  Readme.md  doxygen-custom-header.html  uncrustify.cfg
cmake/: confer.pc.in  confer_config_version.cmake
examples/: CMakeLists.txt  Readme.md  custom_errors_class.cpp  example.cpp  usage_example.cpp
include/: confer.hpp  confer_config.hpp.in
src/: confer.cpp
tests/: CMakeLists.txt  test.cpp  tester.cpp
